[package]
name = "todo-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
chrono = "0.4"
ratatui = { version = "0.22.0", features = ["all-widgets", "widget-calendar"] }
rusqlite = "0.25.3"
clap = { version = "4.4.8", features = ["derive"] }
